.kubernetes/k8s_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: booking
    spec:
      containers:
        - env:
            - name: ConnectionStrings__pgsql
              value: 'Host=localhost;Database=BookingData;Username=postgres;Password=BookingData@2020;'
          image: docker.pkg.github.com/rvtr/rvtr-api-booking/booking:aspnet-rest
          imagePullPolicy: Always
          name: booking
          ports:
            - containerPort: 80
              name: booking-http

        - env:
            - name: POSTGRES_PASSWORD
              value: BookingData@2020
          image: postgres:12
          imagePullPolicy: Always
          name: postgres
          ports:
            - containerPort: 5432
              name: postgres-tcp

      imagePullSecrets:
        - name: github
