.kubernetes/k8s_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: booking
spec:
  ports:
    - name: booking
      port: 80
      targetPort: booking-http
  selector:
    app: booking
  type: ClusterIP
